# jobs-cli

./: .env.example  .gitignore  README.md  TASKS.md  jobs-cli.spec  main.py  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py  config.py  main.py  models.py
src/cache/: __init__.py  database.py
src/client/: __init__.py  mcp_client.py
src/display/: __init__.py  ui.py
src/scrapers/: __init__.py  base.py  linkedin.py  zhaopin.py
src/tui/: __init__.py  app.py
src/utils/: __init__.py  parser.py
