[project]
name = "jobs-cli"
version = "0.1.0"
description = "Aggregate software engineering jobs from Chinese job platforms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.0",
    "httpx>=0.28.1",
    "mcp>=1.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
jobs-cli = "src.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
